--- a/week_1/Intro.ipynb
+++ b/week_1/Intro.ipynb
@@ -642,7 +642,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "* Easy enough! \n",
@@ -1014,19 +1017,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---------------------------------------------\n",
-      "| user1                                     |\n",
-      "| test@mail.xyz                             |\n",
-      "---------------------------------------------\n",
       "| Current Assignment Grade  0%              |\n",
-      "---------------------------------------------\n",
       "| w1_L2_regression         | not attempted  |\n",
       "| w1_cal_pseudoinverse     | not attempted  |\n",
       "| w1_linear_forward        | not attempted  |\n",
@@ -1049,8 +1047,7 @@
       "| w3_flatten_forward       | not attempted  |\n",
       "| w3_l2_regularizer        | not attempted  |\n",
       "| w3_maxpool_forward       | not attempted  |\n",
-      "| w3_relu_forward          | not attempted  |\n",
-      "---------------------------------------------\n"
+      "| w3_relu_forward          | not attempted  |\n"
      ]
     }
    ],
@@ -1160,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1177,7 +1174,7 @@
     "    ### YOUR CODE ###\n",
     "    #################\n",
     "    \n",
-    "    \n",
+    "    output = np.dot(x_input, P)\n",
     "    return output"
    ]
   },
@@ -1245,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1276,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1646,7 +1643,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.3"
   },
   "mimetype": "text/x-python",
   "name": "python",
@@ -1655,5 +1652,5 @@
   "version": 3
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
